--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,10 @@ language: node_js
 node_js:
   - "8"
   
-addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+before_script:
+  - sudo apt-get update
+  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+  - sudo dpkg -i google-chrome*.deb
  
 cache:
   directories:
@@ -20,4 +18,4 @@ install:
   - npm install
  
 script:
-  - ng test
+  - ng test --watch=false
