--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
-dist: trusty
-sudo: false
- 
 language: node_js
 node_js:
   - "8"
- 
+  
+dist: trusty
+sudo: false
+
 cache:
   directories:
-     - ./node_modules
- 
-before_script:
-  - npm install -g @angular/cli
+    - node_modules
+
+addons:
+  chrome: stable
 
 script:
-  - ng build --prod --aot
-  - ng test
+  - npm run lint
+  - npm run test:headless
+  - npm run build
+  - xvfb-run npm run e2e
