--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
   - "8"
-  
+
 dist: trusty
 sudo: false
 
@@ -9,11 +9,8 @@ cache:
   directories:
     - node_modules
 
-addons:
-  chrome: stable
+before_script:
+  - npm install -g @angular/cli
 
 script:
-  - npm run lint
-  - npm run test:headless
-  - npm run build
-  - xvfb-run npm run e2e
+  - ng test
