--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,23 @@
+dist: trusty
+sudo: false
+ 
 language: node_js
 node_js:
   - "8"
-
-dist: trusty
-sudo: false
-
+  
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+ 
 cache:
   directories:
-    - node_modules
-
-addons:
-  chrome: stable
-
-before_script:
-  - npm install -g @angular/cli
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-
+     - ./node_modules
+ 
+install:
+  - npm install
+ 
 script:
-  - ng test
+  - npm run test --single-run --no-progress --browser=ChromeHeadlessCI
