--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ install:
   - npm install
  
 script:
-  - npm run test --single-run --no-progress --browser=ChromeHeadlessCI
+  - npm run test -- --single-run --no-progress --browser=ChromeHeadlessCI
