--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ install:
   - npm install
  
 script:
-  - ng test --browsers=ChromeHeadlessCI --watch=false
+  - ng test --browsers=ChromeHeadlessCI --watch=false --code-coverage
